add real texts and remove the lorem also increased the size for the subtitle

--- a/index.html
+++ b/index.html
@@ -54,30 +54,31 @@
         <article class="contenedor">
           <h2 class="tituloMain">About us</h2>
           <p class="textoMain">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum facilis
-            ex modi voluptatibus dolore rem blanditiis laudantium non dolorum.
-            Vitae exercitationem harum fugit praesentium eius quidem enim
-            sapiente! Nostrum et similique pariatur quos laudantium eaque iste
-            impedit nesciunt officia. Aliquam eius sed quae, temporibus
-            voluptatibus nobis repellendus laudantium, iste molestiae aspernatur
-            id ratione vitae pariatur voluptas velit possimus dolor impedit
-            ipsa. Rem est ipsum quisquam aliquid qui, nam harum ullam
-            accusantium quas nisi at id fugiat itaque repellat, animi dolorem
-            optio vel mollitia blanditiis veniam rerum. Possimus sunt dolores
-            corrupti maxime quia repellat? Nisi accusantium distinctio, rerum
-            vero harum officia aperiam quod et soluta blanditiis, ullam
-            doloremque cupiditate sed similique nesciunt quis temporibus
-            consectetur assumenda consequuntur voluptas voluptatum a sit
-            eligendi. Eum commodi tenetur odio, voluptatum cumque distinctio quo
-            sed fugit repudiandae laudantium ea deserunt iusto laborum,
-            explicabo amet officiis veniam. Alias placeat sunt inventore
-            incidunt repudiandae quam officiis molestiae ipsum facere at a,
-            voluptatum fugit repellendus tenetur voluptates nihil provident quos
-            et temporibus! Reiciendis amet facere mollitia minus temporibus
-            quaerat praesentium facilis quae! Ratione consequuntur
-            exercitationem ullam neque nulla facere recusandae, at eos est amet
-            iure assumenda ipsum ut corporis voluptatum ad nihil. Soluta
-            corrupti pariatur perspiciatis inventore laboriosam?
+            Welcome to El Patio, where culinary excellence meets warm
+            hospitality. Located in the heart of our city, El Patio is more than
+            just a restaurant; it's a destination where flavors, culture, and
+            creativity come together to create an unforgettable dining
+            experience. At El Patio, our passion for food knows no bounds. Our
+            talented chefs draw inspiration from around the world, crafting
+            dishes that tantalize your taste buds and awaken your senses.
+            Whether you're craving sizzling steaks, fresh seafood, or delightful
+            vegetarian options, our menu offers a diverse array of choices to
+            satisfy every palate. What truly distinguishes us is our unwavering
+            commitment to using locally sourced, fresh ingredients. We believe
+            in supporting our community and embracing sustainability in our
+            culinary practices. Every dish is carefully prepared to showcase the
+            vibrant flavors and textures of our region. Step inside El Patio and
+            you'll be greeted by a welcoming and cozy ambiance that sets the
+            perfect stage for any occasion. Whether you're celebrating a special
+            event, enjoying a romantic evening, or simply savoring a meal with
+            friends and family, our dedicated staff is here to ensure your
+            experience is nothing short of exceptional. At El Patio, we take
+            pride in our meticulous attention to detail and exceptional service.
+            We invite you to dine with us and discover why El Patio is the
+            preferred choice for food enthusiasts. Join us on a flavorful
+            journey and create cherished memories, one plate at a time.
+            Experience the magic of El Patio and let your taste buds revel in
+            the culinary delights that await you.
           </p>
           <img
             src="/img/chef.jpg"
@@ -90,30 +91,23 @@
         <article class="contenedor nuestroMenu">
           <h2 class="tituloMain">Our Menu</h2>
           <p class="textoMain">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum
-            laboriosam facilis vitae eos velit? Facere, accusantium! Provident
-            distinctio quos officiis inventore ut iusto vitae, enim maiores
-            ullam quo itaque, tenetur aut facere voluptatibus ab repellendus
-            iure autem? Totam illo, tempore unde, libero soluta aperiam nisi
-            quae, cum officia eum saepe. Fugit dolorum nisi optio iusto et qui
-            dignissimos ratione, culpa, aliquid tempora illum recusandae
-            quisquam quaerat non aut odit omnis nemo molestias facere, labore
-            quia! A hic aspernatur molestias, distinctio possimus provident?
-            Aperiam, error aspernatur? Provident dolorum odio obcaecati atque!
-            Delectus aspernatur rerum corporis aperiam amet accusantium
-            asperiores unde maiores animi nobis debitis nisi natus repellendus a
-            esse quod, voluptatum reprehenderit odio suscipit nostrum soluta?
-            Numquam commodi illum officia. Architecto, temporibus nesciunt!
-            Culpa labore in veniam ab molestias, excepturi veritatis quas
-            dignissimos, enim architecto cumque doloremque consequuntur ex cum
-            expedita quisquam molestiae libero eligendi corporis recusandae
-            asperiores quidem, repellendus tempore. Facere repellendus nemo
-            dicta libero aliquid sunt odit, suscipit id perferendis quasi
-            distinctio, ab debitis quo quis dignissimos blanditiis quae atque
-            culpa error tenetur esse consequuntur quisquam! Corporis praesentium
-            possimus, nulla mollitia tenetur commodi dolore, molestias quam
-            deserunt incidunt hic recusandae iste eveniet nihil officiis
-            doloribus architecto sequi et amet?
+            At El Patio our menu is a true feast for the senses. Each dish we
+            serve is a culinary masterpiece, thoughtfully crafted by our
+            passionate chefs. From the bold flavors of our grilled steaks to the
+            fresh and creative vegetarian options, our menu offers a wide
+            variety of choices to satisfy every palate. We take pride in using
+            fresh, locally sourced ingredients whenever possible. We believe in
+            supporting our community and promoting sustainability in our
+            culinary practices. Every dish is designed to highlight the vibrant
+            flavors and textures of our region. Whether you're seeking an
+            elegant dining experience or simply looking to enjoy a delicious
+            meal in a relaxed setting, El Patio has something for everyone. Our
+            menu is designed to surprise and delight our diners, and our
+            friendly staff is ready to provide exceptional service. Join us at
+            El Patio and discover why our menu is a true celebration of local
+            and global cuisine. Each visit is an opportunity to explore new
+            flavors and create unforgettable memories. We look forward to
+            welcoming you soon!
           </p>
           <table>
             <thead>
@@ -130,15 +124,15 @@
                   Wonderful combination of prime tenderloin, winter greens,
                   Jerusalem artichoke puree, and oxtail reduction sauce.
                 </td>
-                <td class="precio">$18.89</td>
+                <td class="precio">$18.99</td>
               </tr>
               <tr>
                 <td>Trippa Satriano</td>
                 <td>
-                  Wonderful combination of prime tenderloin, winter greens,
-                  Jerusalem artichoke puree, and oxtail reduction sauce.
+                  This dish features tender cuts of meat stewed in a rich,
+                  tomato-based sauce infused with aromatic herbs.
                 </td>
-                <td class="precio">$17.89</td>
+                <td class="precio">$17.99</td>
               </tr>
               <tr>
                 <td>Pappardelle Mimmo</td>
@@ -147,31 +141,31 @@
                   lobster, asparagus, butter, sage and truffle oil to cater
                   every palate.
                 </td>
-                <td class="precio">$16.89</td>
+                <td class="precio">$16.99</td>
               </tr>
               <tr>
-                <td>Filetto Di Manzo</td>
+                <td>Carpaccio</td>
                 <td>
-                  Wonderful combination of prime tenderloin, winter greens,
-                  Jerusalem artichoke puree, and oxtail reduction sauce.
+                  Delicate beef slices, dressed with olive oil, lemon juice, and
+                  Parmesan, creating a flavorful, elegant appetizer.
                 </td>
-                <td class="precio">$18.99</td>
+                <td class="precio">$14.99</td>
               </tr>
               <tr>
-                <td>Filetto Di Manzo</td>
+                <td>Minestrone</td>
                 <td>
-                  Wonderful combination of prime tenderloin, winter greens,
-                  Jerusalem artichoke puree, and oxtail reduction sauce.
+                  Hearty Minestrone soup, a medley of fresh vegetables and
+                  beans, simmered in a savory, tomato-based broth.
                 </td>
-                <td class="precio">$18.99</td>
+                <td class="precio">$20.99</td>
               </tr>
               <tr>
-                <td>Filetto Di Manzo</td>
+                <td>Spaghetti alla carbonara</td>
                 <td>
-                  Wonderful combination of prime tenderloin, winter greens,
-                  Jerusalem artichoke puree, and oxtail reduction sauce.
+                  Creamy Spaghetti alla Carbonara, a Roman classic featuring
+                  eggs, Pecorino Romano, pancetta, and black pepper.
                 </td>
-                <td class="precio">$18.99</td>
+                <td class="precio">$15.99</td>
               </tr>
             </tbody>
           </table>
@@ -191,7 +185,7 @@
         <a href="#">Home</a>
         <a href="#">About</a>
         <a href="#">Contact</a>
-        <p>&copy; 2021 Restaurant. All rights reserved</p>
+        <p>&copy; 2023 Restaurant. All rights reserved</p>
       </article>
     </footer>
   </body>
