class names and ids were translated into english

--- a/index.html
+++ b/index.html
@@ -22,11 +22,7 @@
         <a href="#">Home</a>
         <a href="#">About</a>
         <a href="#">Contact</a>
-        <img
-          src="/img/bglogo.png"
-          alt="restaurant logo image"
-          id="imagenLogo"
-        />
+        <img src="/img/bglogo.png" alt="restaurant logo image" id="logoimg" />
       </nav>
     </header>
     <main>
@@ -36,24 +32,24 @@
             <img
               src="/img/platterjpg.jpg"
               alt="shows a table with food, wine and a glass"
-              id="imagenPrincipal"
+              id="mainimg"
             />
           </div>
-          <div id="positionTitulos">
-            <h1 id="titulo">Welcome</h1>
+          <div id="titleposition">
+            <h1 id="title">Welcome</h1>
             <hr />
-            <h2 id="subTitulo">
+            <h2 id="subtitle">
               Our restaurant offers full service dining with breathtaking
-              views<br />
-              seen from our indoor covered patio and our outdoor sundeck.
+              views<br />seen from our indoor covered patio and our outdoor
+              sundeck.
             </h2>
           </div>
         </article>
       </section>
       <section>
-        <article class="contenedor">
-          <h2 class="tituloMain">About us</h2>
-          <p class="textoMain">
+        <article class="container">
+          <h2 class="maintitle">About us</h2>
+          <p class="maintext">
             Welcome to El Patio, where culinary excellence meets warm
             hospitality. Located in the heart of our city, El Patio is more than
             just a restaurant; it's a destination where flavors, culture, and
@@ -80,17 +76,13 @@
             Experience the magic of El Patio and let your taste buds revel in
             the culinary delights that await you.
           </p>
-          <img
-            src="/img/chef.jpg"
-            alt="image of a chef cooking"
-            id="imagenChef"
-          />
+          <img src="/img/chef.jpg" alt="image of a chef cooking" id="chefimg" />
         </article>
       </section>
       <section>
-        <article class="contenedor nuestroMenu">
-          <h2 class="tituloMain">Our Menu</h2>
-          <p class="textoMain">
+        <article class="container ourmenu">
+          <h2 class="maintitle">Our Menu</h2>
+          <p class="maintext">
             At El Patio our menu is a true feast for the senses. Each dish we
             serve is a culinary masterpiece, thoughtfully crafted by our
             passionate chefs. From the bold flavors of our grilled steaks to the
@@ -124,7 +116,7 @@
                   Wonderful combination of prime tenderloin, winter greens,
                   Jerusalem artichoke puree, and oxtail reduction sauce.
                 </td>
-                <td class="precio">$18.99</td>
+                <td class="price">$18.99</td>
               </tr>
               <tr>
                 <td>Trippa Satriano</td>
@@ -132,7 +124,7 @@
                   This dish features tender cuts of meat stewed in a rich,
                   tomato-based sauce infused with aromatic herbs.
                 </td>
-                <td class="precio">$17.99</td>
+                <td class="price">$17.99</td>
               </tr>
               <tr>
                 <td>Pappardelle Mimmo</td>
@@ -141,7 +133,7 @@
                   lobster, asparagus, butter, sage and truffle oil to cater
                   every palate.
                 </td>
-                <td class="precio">$16.99</td>
+                <td class="price">$16.99</td>
               </tr>
               <tr>
                 <td>Carpaccio</td>
@@ -149,7 +141,7 @@
                   Delicate beef slices, dressed with olive oil, lemon juice, and
                   Parmesan, creating a flavorful, elegant appetizer.
                 </td>
-                <td class="precio">$14.99</td>
+                <td class="price">$14.99</td>
               </tr>
               <tr>
                 <td>Minestrone</td>
@@ -157,7 +149,7 @@
                   Hearty Minestrone soup, a medley of fresh vegetables and
                   beans, simmered in a savory, tomato-based broth.
                 </td>
-                <td class="precio">$20.99</td>
+                <td class="price">$20.99</td>
               </tr>
               <tr>
                 <td>Spaghetti alla carbonara</td>
@@ -165,23 +157,19 @@
                   Creamy Spaghetti alla Carbonara, a Roman classic featuring
                   eggs, Pecorino Romano, pancetta, and black pepper.
                 </td>
-                <td class="precio">$15.99</td>
+                <td class="price">$15.99</td>
               </tr>
             </tbody>
           </table>
         </article>
       </section>
-      <img src="/img/chat.svg" alt="chat image" id="imagenChat" />
+      <img src="/img/chat.svg" alt="chat image" id="chatimg" />
     </main>
     <footer>
       <article>
-        <img
-          src="/img/bglogo.png"
-          alt="restaurant logo image"
-          id="imagenLogo2"
-        />
+        <img src="/img/bglogo.png" alt="restaurant logo image" id="logoimg2" />
       </article>
-      <article id="posicionTextoFooter">
+      <article id="footertextposition">
         <a href="#">Home</a>
         <a href="#">About</a>
         <a href="#">Contact</a>
