change in the subtitle values in CSS and the br tag was removed

--- a/index.html
+++ b/index.html
@@ -38,11 +38,10 @@
           <div id="titleposition">
             <h1 id="title">Welcome</h1>
             <hr />
-            <h2 id="subtitle">
-              Our restaurant offers full service dining with breathtaking
-              views<br />seen from our indoor covered patio and our outdoor
-              sundeck.
-            </h2>
+            <p id="subtitle">
+              Our restaurant offers full service dining with breathtaking views
+              seen from our indoor covered patio and our outdoor sundeck.
+            </p>
           </div>
         </article>
       </section>
