--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
           <div id="titleposition">
             <h1 id="title">Welcome</h1>
             <hr />
-            <p id="subtitle">
+            <h2 id="subtitle">
               Our restaurant offers full service dining with breathtaking views
               seen from our indoor covered patio and our outdoor sundeck.
-            </p>
+            </h2>
           </div>
         </article>
       </section>
