CSS classes name changed

--- a/index.html
+++ b/index.html
@@ -22,7 +22,11 @@
         <a href="#">Home</a>
         <a href="#">About</a>
         <a href="#">Contact</a>
-        <img src="/img/bglogo.png" alt="restaurant logo image" id="logoimg" />
+        <img
+          src="/img/bglogo.png"
+          alt="restaurant logo image"
+          class="navbar-logo"
+        />
       </nav>
     </header>
     <main>
@@ -32,13 +36,13 @@
             <img
               src="/img/platterjpg.jpg"
               alt="shows a table with food, wine and a glass"
-              id="mainimg"
+              class="main-img"
             />
           </div>
-          <div id="titleposition">
-            <h1 id="title">Welcome</h1>
+          <div class="main-title-position">
+            <h1 class="main-title">Welcome</h1>
             <hr />
-            <h2 id="subtitle">
+            <h2 class="main-text">
               Our restaurant offers full service dining with breathtaking views
               seen from our indoor covered patio and our outdoor sundeck.
             </h2>
@@ -47,8 +51,8 @@
       </section>
       <section>
         <article class="container">
-          <h2 class="maintitle">About us</h2>
-          <p class="maintext">
+          <h2 class="subtitle">About us</h2>
+          <p class="subtext">
             Welcome to El Patio, where culinary excellence meets warm
             hospitality. Located in the heart of our city, El Patio is more than
             just a restaurant; it's a destination where flavors, culture, and
@@ -75,13 +79,17 @@
             Experience the magic of El Patio and let your taste buds revel in
             the culinary delights that await you.
           </p>
-          <img src="/img/chef.jpg" alt="image of a chef cooking" id="chefimg" />
+          <img
+            src="/img/chef.jpg"
+            alt="image of a chef cooking"
+            class="chef-img"
+          />
         </article>
       </section>
       <section>
         <article class="container ourmenu">
-          <h2 class="maintitle">Our Menu</h2>
-          <p class="maintext">
+          <h2 class="subtitle">Our Menu</h2>
+          <p class="subtext">
             At El Patio our menu is a true feast for the senses. Each dish we
             serve is a culinary masterpiece, thoughtfully crafted by our
             passionate chefs. From the bold flavors of our grilled steaks to the
@@ -162,13 +170,17 @@
           </table>
         </article>
       </section>
-      <img src="/img/chat.svg" alt="chat image" id="chatimg" />
+      <img src="/img/chat.svg" alt="chat image" class="chat-img" />
     </main>
     <footer>
       <article>
-        <img src="/img/bglogo.png" alt="restaurant logo image" id="logoimg2" />
+        <img
+          src="/img/bglogo.png"
+          alt="restaurant logo image"
+          class="footer-logo"
+        />
       </article>
-      <article id="footertextposition">
+      <article class="footer-text">
         <a href="#">Home</a>
         <a href="#">About</a>
         <a href="#">Contact</a>
